Ok-accesso-impostazioni

--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -98,8 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_types" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_types" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_types"></tbody>
                     </table>
@@ -129,8 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_models" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_models" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_models" class="divide-y"></tbody>
                     </table>
@@ -160,8 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_templates" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_templates" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_templates" class="divide-y"></tbody>
                     </table>
@@ -209,7 +206,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_automezzi.js" type="module"></script>
+    <!-- Scripts -->
+    <script src="assets/js/configurazione_automezzi.js?v=2.2" type="module"></script>
 </body>
 
 </html>
