--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -20,6 +20,8 @@
 
     <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
     <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
+    <!-- Core UI per Toast (Protocollo V3) -->
+    <script src="assets/js/ui-core.js?v=2.2"></script>
 </head>
 
 <body>
@@ -99,9 +101,12 @@
         </div>
     </div>
 
+    <!-- Toast Container (Se non generato dinamicamente da ui-core) -->
+    <div id="toast-container"></div>
+
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/login.js"></script>
+    <script type="module" src="assets/js/main.js?v=2.2"></script>
+    <script type="module" src="assets/js/login.js?v=2.2"></script>
 
 </body>
 
