--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -31,9 +31,16 @@
         <header class="titanium-header">
             <div id="header-content" class="header-stack">
                 <h2 class="header-title" data-t="expiry_rules_title_page">Regole Scadenze</h2>
-                <a href="impostazioni.html" class="btn-icon-header">
-                    <span class="material-symbols-outlined">arrow_back</span>
-                </a>
+                <div style="position: absolute; left: 0; display: flex; gap: 0.5rem;">
+                    <a href="impostazioni.html" class="btn-icon-header" style="position: relative; right: auto;">
+                        <span class="material-symbols-outlined">arrow_back</span>
+                    </a>
+                </div>
+                <div style="position: absolute; right: 0; display: flex; gap: 0.5rem;">
+                    <a href="home_page.html" class="btn-icon-header" style="position: relative;">
+                        <span class="material-symbols-outlined">home</span>
+                    </a>
+                </div>
             </div>
         </header>
 
