--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -20,11 +20,25 @@
 
     <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
     <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
+    <!-- Core UI per Toast (Protocollo V3) -->
+    <script src="assets/js/ui-core.js?v=2.2"></script>
 </head>
 
 <body>
 
     <div class="titanium-box">
+
+        <!-- LANGUAGE SELECTOR -->
+        <div class="lang-selector-container">
+            <button class="lang-btn-float" id="lang-toggle-btn">
+                <span class="material-symbols-outlined" style="font-size: 18px;">language</span>
+                <span class="lang-label" data-t="language">Lingua</span>
+                <span class="material-symbols-outlined" style="font-size: 16px;">expand_more</span>
+            </button>
+            <div class="lang-dropdown" id="lang-dropdown">
+                <!-- JS will populate this -->
+            </div>
+        </div>
 
         <!-- Scenografia -->
         <div class="glass-glow"></div>
@@ -80,7 +94,11 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/reset_password.js"></script>
+    <!-- Toast Container -->
+    <div id="toast-container"></div>
+
+    <!-- Scripts -->
+    <script type="module" src="assets/js/reset_password.js?v=2.2"></script>
 
 </body>
 
