--- a/Frontend/public/configurazione_documenti.html
+++ b/Frontend/public/configurazione_documenti.html
@@ -93,8 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_types" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_types" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_types"></tbody>
                     </table>
@@ -123,8 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_models" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_models" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_models" class="divide-y"></tbody>
                     </table>
@@ -154,8 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="container_templates" class="accordion-content"
-                    style="display: none; padding: 0; overflow: hidden; background: rgba(0,0,0,0.2);">
+                <div id="container_templates" class="accordion-content">
                     <table class="w-full text-xs">
                         <tbody id="tbody_templates" class="divide-y"></tbody>
                     </table>
@@ -205,7 +202,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_documenti.js" type="module"></script>
+    <!-- Scripts -->
+    <script src="assets/js/configurazione_documenti.js?v=2.2" type="module"></script>
 </body>
 
 </html>
