--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -179,7 +179,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/configurazione_generali.js" type="module"></script>
+    <script src="assets/js/configurazione_generali.js?v=2.1" type="module"></script>
 </body>
 
 </html>
