Fix-UX-ClickBlocking-HomeHeader

--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -33,7 +33,7 @@
     <div class="titanium-box">
 
         <!-- 2. FARO ANIMATO "VIVO" (Standard Regola #3) -->
-        <div class="glass-glow"></div>
+        <div class="glass-glow pointer-events-none"></div>
 
         <!-- 4. HEADER PLACEHOLDER -->
         <div id="header-placeholder"></div>
@@ -42,7 +42,7 @@
         <main class="titanium-main no-select">
 
             <!-- 6. SAETTA MASTER (Riflesso Metallico Totale) -->
-            <div class="saetta-master"></div>
+            <div class="saetta-master pointer-events-none"></div>
 
             <!-- NUCLEO NAVIGAZIONE (Matrix Grid 2x2) -->
             <div class="grid grid-cols-2 gap-4 px-2 mb-8">
