--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -24,7 +24,7 @@
 
 <body class="titanium-bg">
     <div class="titanium-box">
-        <div class="glass-glow"></div>
+        <div class="glass-glow pointer-events-none"></div>
 
         <!-- HEADER PLACEHOLDER -->
         <div id="header-placeholder"></div>
