--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -1,219 +1,156 @@
 <!DOCTYPE html>
-<html class="dark" lang="it">
+<html lang="it" class="titanium-forced-dark">
 
 <head>
     <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#e2e8f0">
-    <title>Archivio Account</title>
-    <!-- PWA / Mobile Capable -->
-    <script>
-        // FORCE DARK MODE (Theme Override)
-        document.documentElement.classList.add('dark');
-        document.documentElement.classList.remove('light');
-    </script>
-    <link rel="manifest" href="manifest.json" />
-    <!-- Tailwind CSS, Google Fonts, Material Symbols -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&amp;display=swap"
-        rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Archivio Account - Titanium</title>
 
-    <script>
-        window.tailwind = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#0A162A",
-                    },
-                    fontFamily: {
-                        "display": ["Manrope", "sans-serif"]
-                    },
-                    borderRadius: { "DEFAULT": "0.5rem", "lg": "1rem", "xl": "1.5rem", "full": "9999px" },
-                },
-            },
-        }
-    </script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <style>
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
+    <!-- Design System Master -->
+    <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
 
-        body {
-            min-height: 100dvh;
-            background-color: #0a0f1e;
-        }
-
-        /* 3) FARO ANIMATO (GLASS GLOW) */
-        @keyframes glowFloat {
-
-            0%,
-            100% {
-                opacity: 0.6;
-                transform: translateY(0) scale(1) translateX(-50%);
-            }
-
-            50% {
-                opacity: 0.9;
-                transform: translateY(-10px) scale(1.05) translateX(-50%);
-            }
-        }
-
-        .glass-glow {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            width: 150%;
-            height: 120%;
-            background: radial-gradient(ellipse at 50% 0%,
-                    rgba(80, 150, 255, 0.4) 0%,
-                    rgba(80, 150, 255, 0.15) 25%,
-                    rgba(80, 150, 255, 0.05) 50%,
-                    transparent 75%);
-            filter: blur(80px);
-            z-index: 0;
-            pointer-events: none;
-            transform: translateX(-50%);
-            animation: glowFloat 4s ease-in-out infinite;
-        }
-
-        /* 9) BORDER GLOW RIFLETTENTE */
-        .border-glow {
-            position: relative;
-        }
-
-        .border-glow::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            padding: 1px;
-            border-radius: inherit;
-            background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), transparent, rgba(255, 255, 255, 0.05));
-            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            -webkit-mask-composite: xor;
-            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-            mask-composite: exclude;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        /* Fix icon alignment */
-        .material-symbols-outlined {
-            vertical-align: middle;
-        }
-    </style>
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js"></script>
+    <script src="assets/js/titanium-core.js"></script>
+    <script src="assets/js/translations.js"></script>
 </head>
 
-<body class="bg-[#0a0f1e] text-white font-display overflow-x-hidden antialiased selection:bg-blue-500/30">
-    <!-- 2) Contenitore Principale -->
-    <div
-        class="relative flex min-h-screen w-full flex-col md:max-w-3xl lg:max-w-5xl mx-auto shadow-2xl overflow-hidden bg-gradient-to-l from-[#030712] to-[#162e6e]">
-
-        <!-- 3) Faro -->
+<body class="antialiased">
+    <div class="titanium-box">
+        <!-- Faro Estetico -->
         <div class="glass-glow"></div>
 
-        <!-- 4) Header Fusion -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl z-50 bg-gradient-to-b from-[#0a0f1e] to-transparent backdrop-blur-md">
-            <div class="flex items-center px-4 h-16 gap-4">
-                <a href="impostazioni.html"
-                    class="group relative z-10 flex size-10 shrink-0 items-center justify-center rounded-xl bg-white/5 hover:bg-white/10 border-glow transition-all duration-300 active:scale-95 text-white">
-                    <span
-                        class="material-symbols-outlined text-[24px] group-hover:-translate-x-0.5 transition-transform">arrow_back</span>
+        <!-- HEADER FISSO -->
+        <header class="titanium-header">
+            <div id="header-content" class="header-stack"
+                style="flex-direction: row; justify-content: space-between; align-items: center;">
+
+                <!-- Sinistra: Indietro -->
+                <a href="impostazioni.html" class="btn-icon-header">
+                    <span class="material-symbols-outlined">arrow_back</span>
                 </a>
 
-                <!-- Context Selector (Titanium Style) -->
-                <div class="flex-1 min-w-0 flex flex-col items-center justify-center relative z-10">
-                    <div class="relative w-full max-w-[220px]">
-                        <select id="archive-context-select"
-                            class="w-full bg-[#1e293b]/50 border border-white/10 rounded-lg text-sm font-bold text-center appearance-none focus:ring-2 focus:ring-blue-500/20 py-1.5 px-8 cursor-pointer text-white outline-none transition-all">
-                            <option value="all" class="bg-[#0a162a] text-white">Tutti gli archiviati</option>
-                            <option value="privato" class="bg-[#0a162a] text-white">Solo Archivio Privato</option>
-                            <!-- Companies injected here -->
-                        </select>
-                        <!-- Custom Arrow -->
-                        <span
-                            class="material-symbols-outlined absolute right-2 top-1/2 -translate-y-1/2 text-white/30 pointer-events-none text-lg">expand_more</span>
+                <!-- Centro: Titolo -->
+                <h2 class="header-title"
+                    style="margin: 0; font-size: clamp(0.8rem, 2.5vw, 1.1rem); position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 45%; text-align: center; line-height: 1.1; white-space: normal;"
+                    data-t="account_archive">
+                    Archivio Account
+                </h2>
 
-                        <div class="flex items-center justify-center pointer-events-none mt-1">
-                            <span
-                                class="text-[9px] text-blue-400 font-medium uppercase tracking-widest opacity-80">Sorgente
-                                Dati</span>
-                        </div>
-                    </div>
+                <!-- Destra: Cestino + Home -->
+                <div style="display: flex; align-items: center; gap: 0.5rem;">
+                    <button id="btn-empty-trash" class="btn-icon-header" style="color: #f87171;">
+                        <span class="material-symbols-outlined">delete_forever</span>
+                    </button>
+                    <a href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">home</span>
+                    </a>
                 </div>
-
-                <!-- Empty Trash Button -->
-                <button id="btn-empty-trash"
-                    class="group relative z-10 flex size-10 shrink-0 items-center justify-center rounded-xl bg-red-500/10 hover:bg-red-500/20 border-glow transition-all duration-300 active:scale-95 text-red-400"
-                    title="Svuota Archivio">
-                    <span
-                        class="material-symbols-outlined text-[24px] group-hover:rotate-12 transition-transform">delete_forever</span>
-                </button>
             </div>
         </header>
 
-        <!-- Header Spacer -->
-        <div class="h-20 w-full shrink-0"></div>
+        <main class="settings-container no-select" style="padding-top: 5rem; gap: 1rem;">
 
-        <div class="px-4 pb-24 flex-grow flex flex-col gap-4">
-            <!-- Search -->
+            <!-- Context Selector & Search Area -->
+            <div class="settings-group" style="margin-bottom: 0.5rem; gap: 0.5rem;">
+
+                <!-- Selector -->
+                <div class="settings-item" style="padding: 0.8rem; margin-bottom: 0;">
+                    <div class="settings-item-header">
+                        <div class="settings-icon-box bg-blue-glass"
+                            style="width: 32px; height: 32px; font-size: 1.1rem;">
+                            <span class="material-symbols-outlined">filter_list</span>
+                        </div>
+                        <select id="archive-context-select"
+                            style="width: 100%; background: transparent; border: none; color: white; font-weight: 600; font-size: 0.9rem; outline: none; margin-left: 0.5rem; cursor: pointer;">
+                            <option value="all" style="background: #0f1932; color: white;">Tutti gli archiviati</option>
+                            <option value="privato" style="background: #0f1932; color: white;">Solo Archivio Privato
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Search -->
+                <div style="position: relative;">
+                    <input type="search" placeholder="Cerca nell'archivio..." class="settings-item"
+                        style="width: 100%; padding-left: 3rem; margin-bottom: 0; background: rgba(15, 25, 50, 0.6); font-size: 0.9rem;">
+                    <span class="material-symbols-outlined"
+                        style="position: absolute; left: 1rem; top: 50%; transform: translateY(-50%); opacity: 0.5; pointer-events: none;">search</span>
+                </div>
+            </div>
+
+            <!-- Hint Swipe -->
             <div
-                class="group flex w-full items-center rounded-xl border border-white/10 bg-black/20 focus-within:border-blue-500/50 focus-within:ring-1 focus-within:ring-blue-500/20 transition-all shadow-inner overflow-hidden">
-                <div
-                    class="pl-4 text-white/40 flex items-center justify-center group-focus-within:text-blue-400 transition-colors">
-                    <span class="material-symbols-outlined text-[22px]">search</span>
-                </div>
-                <input
-                    class="w-full bg-transparent border-none text-white placeholder:text-white/30 h-12 px-3 text-base focus:ring-0"
-                    placeholder="Cerca nell'archivio..." type="search" />
+                style="display: flex; justify-content: center; gap: 1rem; opacity: 0.4; font-size: 0.7rem; font-weight: 700; text-transform: uppercase;">
+                <span style="display: flex; align-items: center; gap: 4px;"><span class="material-symbols-outlined"
+                        style="font-size: 14px;">swipe_left</span> Ripristina</span>
+                <span style="display: flex; align-items: center; gap: 4px;">Elimina <span
+                        class="material-symbols-outlined" style="font-size: 14px;">swipe_right</span></span>
             </div>
 
-            <!-- Hint (Styled Badge) -->
-            <div class="flex justify-center gap-4 text-[10px] uppercase tracking-wide font-medium text-white/30">
-                <span class="flex items-center gap-1"><span
-                        class="material-symbols-outlined text-[14px]">swipe_left</span> Ripristina</span>
-                <span class="w-px h-3 bg-white/10"></span>
-                <span class="flex items-center gap-1">Elimina <span
-                        class="material-symbols-outlined text-[14px]">swipe_right</span></span>
-            </div>
-
-            <div id="accounts-container" class="space-y-3">
-                <div class="text-center py-10 text-gray-500 flex flex-col items-center">
-                    <span
-                        class="material-symbols-outlined animate-spin text-3xl mb-2 text-primary">progress_activity</span>
-                    Caricamento archivio...
+            <!-- List Container -->
+            <div id="accounts-container" style="display: flex; flex-direction: column; gap: 0.75rem;">
+                <!-- Loading State -->
+                <div class="flex flex-col items-center justify-center py-10"
+                    style="display: flex; flex-direction: column; align-items: center; opacity: 0.6;">
+                    <div
+                        style="width: 1.5rem; height: 1.5rem; border: 2px solid white; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 0.5rem;">
+                    </div>
+                    <span style="font-size: 0.8rem;">Caricamento...</span>
                 </div>
             </div>
-        </div>
+
+        </main>
+
+        <!-- FOOTER PREMIUM -->
+        <footer class="titanium-footer">
+            <div id="footer-placeholder" style="opacity: 0.3; text-align: center;">
+                <span
+                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
+                    Titanium Security Protocol V3.0
+                </span>
+            </div>
+        </footer>
     </div>
 
-    <!-- 5) Footer Fusion (Fixed) -->
-    <div
-        class="fixed bottom-0 left-0 right-0 md:max-w-3xl lg:max-w-5xl mx-auto h-20 pointer-events-none z-50 bg-gradient-to-t from-[#0a0f1e] to-transparent backdrop-blur-sm">
+    <!-- Toast & Modals (via ui-core) -->
+    <div id="toast"
+        class="fixed bottom-20 left-1/2 -translate-x-1/2 bg-white text-[#0a0f1e] px-6 py-2.5 rounded-full text-sm font-bold shadow-2xl opacity-0 transition-opacity pointer-events-none z-[99999]">
     </div>
 
-    <!-- Toast Container -->
-    <div id="toast-container"
-        class="fixed bottom-24 left-0 right-0 p-4 flex flex-col items-center gap-2 pointer-events-none z-50"></div>
+    <!-- Inline Utils -->
+    <style>
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
 
-    <!-- Module Script -->
-    <script src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/archivio_account.js?v=6"></script>
-    </div>
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Fix per inputs in settings styling */
+        input[type="search"]::placeholder {
+            color: rgba(255, 255, 255, 0.3);
+        }
+
+        select option {
+            color: white;
+        }
+    </style>
+
+    <!-- Scripts -->
+    <script src="assets/js/ui-core.js"></script>
+    <script type="module" src="assets/js/archivio_account.js?v=7"></script>
 </body>
 
 </html>
